# sibna-protocol-v7-chat

./: README.md
chat_app/: README.md  app.py
chat_app/sibna_sdk/: Cargo.toml  Makefile  README.md  build.rs  client.py
chat_app/sibna_sdk/src/: lib.rs
chat_app/static/css/: style.css
chat_app/static/js/: chat.js
chat_app/templates/: index.html
python/core/: cbindgen.toml
python/core/src/ffi/: context.rs
