# Independent SDK - Not part of parent workspace
[workspace]

[package]
name = "sibna"
version = "6.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["Sibna Team"]

[lib]
name = "sibna"
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []
ffi = []
python = []

[dependencies]
x25519-dalek = { version = "2.0", features = ["reusable_secrets", "static_secrets"] }
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde", "zeroize"] }
chacha20poly1305 = { version = "0.10", features = ["std"] }

aes-gcm = { version = "0.10", features = ["aes"] }
hkdf = "0.12"
hmac = { version = "0.12", features = ["std"] }
sha2 = "0.10"
blake3 = "1.5"
rand_core = "0.6"
rand = "0.8"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
zeroize = { version = "1.6", features = ["zeroize_derive", "alloc"] }
bytes = "1.5"
parking_lot = "0.12"
libc = "0.2"

arrayvec = "0.7"
once_cell = "1.18"
num-derive = "0.4"
num-traits = "0.2"
sled = "0.34"

[build-dependencies]
cbindgen = "0.24"

[dev-dependencies]
criterion = "0.5"
proptest = "1.2"
tempfile = "3.8"
hex = "0.4"

